@@ -79,8 +79,7 @@
 		<n5-aws-s3.version>4.2.1</n5-aws-s3.version>
 		<n5-google-cloud>4.1.1</n5-google-cloud>
 		<n5-zarr.version>1.3.5</n5-zarr.version>
-
-		<imglib2-label-multisets.version>0.14.0</imglib2-label-multisets.version>
+		<imglib2-label-multisets.version>0.14.1-SNAPSHOT</imglib2-label-multisets.version>
 
 		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
 		<enforcer.skip>true</enforcer.skip>
@@ -332,7 +331,7 @@
 			<artifactId>scripting-groovy</artifactId>
 			<exclusions>
 				<exclusion>
-					<groupId>org.codehaus.groovy</groupId>
+					<groupId>org.apache.groovy</groupId>
 					<artifactId>groovy</artifactId>
 				</exclusion>
 			</exclusions>
@@ -340,7 +339,6 @@
 		<dependency>
 			<groupId>org.apache.groovy</groupId>
 			<artifactId>groovy</artifactId>
-			<version>${groovy.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scijava</groupId>
@@ -707,6 +705,9 @@
 					<annotationProcessors>
 						<annotationProcessor>org.scijava.annotations.AnnotationProcessor</annotationProcessor>
 					</annotationProcessors>
+					<source>21</source>
+					<target>21</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -910,6 +911,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.jetbrains.kotlin</groupId>
+				<artifactId>kotlin-maven-plugin</artifactId>
+				<version>${kotlin.version}</version>
+				<configuration>
+					<javacOptions>
+						<javacOption>--enable-preview</javacOption>
+					</javacOptions>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<profiles>
@@ -999,9 +1010,6 @@
 								<phase>none</phase>
 							</execution>
 						</executions>
-						<configuration>
-							<jvmTarget>11</jvmTarget>
-						</configuration>
 					</plugin>
 				</plugins>
 			</build>
